# Cairn

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  ARCH.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  astro.config.mjs  go.mod  go.sum  install.sh  package-lock.json  package.json  warp-get-2026-06-07[124607]-XMHC.csv.zst  warp-get-2026-06-19[074818]-UZLM.csv.zst  warp-mixed-2026-06-07[124622]-StHV.csv.zst  warp-put-2026-06-07[115512]-EJVZ.csv.zst  warp-put-2026-06-07[120345]-5aC6.csv.zst  warp-put-2026-06-07[120424]-aLQ1.csv.zst  warp-put-2026-06-07[121219]-Cj1V.csv.zst  warp-put-2026-06-07[124550]-DoY7.csv.zst  warp-put-2026-06-19[074605]-eyT4.csv.zst  warp-put-2026-06-19[074740]-7pxi.csv.zst  warp-put-2026-06-19[074749]-iTPt.csv.zst  warp-put-2026-06-19[074758]-oQ7Q.csv.zst  warp-put-2026-06-19[074808]-HZod.csv.zst
.cargo/: config.toml
.github/: CLAUDE.md
.impeccable/: design.json
admin/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
conformance/: CLAUDE.md  README.md  authz.py  authz.sh  backup_restore.sh  bench_compare.sh  blob_limits.py  blob_limits.sh  buckets.py  buckets.sh  checksums.py  checksums.sh  concurrency.py  concurrency.sh  conformance.py  console_session.sh  crash_consistency.sh  crash_multipoint.py  crash_multipoint.sh  encryption.py  encryption.sh  lifecycle.py  lifecycle.sh  listing.py  listing.sh  load_profile.py  load_profile.sh  mesh.py  mesh.sh  multipart.py  multipart.sh  notifications.py  notifications.sh  object_lock.sh  objects.py  objects.sh  replication_chaos.py  replication_chaos.sh  rotation.py  rotation.sh  (+26 more)
crates/cairn-auth/: CLAUDE.md  Cargo.toml
crates/cairn-auth/src/: bearer.rs  cache.rs  chunked.rs  crypto_util.rs  lib.rs  sigv4.rs
crates/cairn-auth/tests/: chain.rs
crates/cairn-authz/: CLAUDE.md  Cargo.toml
crates/cairn-authz/fuzz/: Cargo.toml
crates/cairn-authz/fuzz/fuzz_targets/: parse_policy.rs
crates/cairn-authz/proptest-regressions/: tests.txt
crates/cairn-authz/src/: acl.rs  condition.rs  lib.rs  matching.rs  parse.rs  tests.rs
crates/cairn-blob/: CLAUDE.md  Cargo.toml
crates/cairn-blob/examples/: bench_small_get.rs
crates/cairn-blob/fuzz/: Cargo.toml
crates/cairn-blob/fuzz/fuzz_targets/: compress_reader.rs
crates/cairn-blob/src/: commit.rs  compress.rs  crc64nvme.rs  hash.rs  lib.rs  raw_io.rs  staging.rs  uring.rs
crates/cairn-blob/tests/: blob.rs
crates/cairn-control/: CLAUDE.md  Cargo.toml
crates/cairn-control/src/: lib.rs  service.rs  wire.rs
crates/cairn-control/tests/: gate.rs
crates/cairn-crypto/: CLAUDE.md  Cargo.toml
crates/cairn-crypto/src/: base64.rs  clock.rs  lib.rs  public_url.rs  system_crypto.rs
crates/cairn-crypto/tests/: traits.rs
crates/cairn-import/: CLAUDE.md  Cargo.toml
crates/cairn-import/src/: lib.rs  source.rs  tests.rs
crates/cairn-import/tests/: source_http.rs
crates/cairn-lifecycle/: CLAUDE.md  Cargo.toml
crates/cairn-lifecycle/src/: config.rs  lib.rs  scanner.rs  tests.rs
crates/cairn-meta/: CLAUDE.md  Cargo.toml
crates/cairn-meta-async/: CLAUDE.md  Cargo.toml  build.rs
crates/cairn-meta-async/src/: apply.rs  driver.rs  lib.rs  libsql_driver.rs  model.rs  range.rs  schema.rs  store.rs  turso_driver.rs  writer.rs
crates/cairn-meta-async/tests/: contract.rs  turso_contract.rs
crates/cairn-meta/examples/: bench_sharded.rs  bench_writer.rs
crates/cairn-meta/src/: apply.rs  cache.rs  lib.rs  model.rs  range.rs  schema.rs  shard.rs  store.rs  writer.rs
crates/cairn-meta/tests/: listing_oracle.rs  sharding.rs  store.rs
crates/cairn-net/: Cargo.toml
crates/cairn-net/src/: lib.rs  ssrf.rs
crates/cairn-protocol/: CLAUDE.md  Cargo.toml
crates/cairn-protocol/benches/: decode.rs
crates/cairn-protocol/fuzz/: Cargo.toml
crates/cairn-protocol/fuzz/fuzz_targets/: chunked_decoder.rs
crates/cairn-protocol/src/: chunked.rs  error_map.rs  keyprovider.rs  lib.rs  request.rs  service.rs
crates/cairn-protocol/tests/: protocol_core.rs
crates/cairn-replication/: CLAUDE.md  Cargo.toml
crates/cairn-replication/src/: backoff.rs  config.rs  lib.rs  route.rs  sink.rs  target.rs
crates/cairn-replication/tests/: gate.rs  sink_http.rs
crates/cairn-s3/: Cargo.toml
crates/cairn-s3/benches/: decode.rs
crates/cairn-s3/fuzz/: Cargo.toml
crates/cairn-s3/fuzz/fuzz_targets/: chunked_decoder.rs
crates/cairn-s3/src/: chunked.rs  error_map.rs  httpdate.rs  lib.rs  request.rs  service.rs
crates/cairn-s3/tests/: s3_core.rs
crates/cairn-server/: CLAUDE.md  Cargo.toml  build.rs
crates/cairn-server/src/: adapter.rs  background.rs  cli_remote.rs  config.rs  fast_get.rs  import_dest.rs  import_run.rs  key_rewrap.rs  main.rs  metrics_agg.rs  observability.rs  replication_audit.rs  sendfile.rs  server.rs  sse.rs  stack.rs  sts.rs  tls.rs  update_check.rs
crates/cairn-server/testdata/: tls_a.crt  tls_a.key  tls_b.crt  tls_b.key
crates/cairn-server/tests/: version.rs
crates/cairn-types/: CLAUDE.md  Cargo.toml
crates/cairn-types/fuzz/: Cargo.toml
crates/cairn-types/fuzz/fuzz_targets/: parse_ids.rs
crates/cairn-types/src/: auth.rs  authz.rs  blob.rs  bucket.rs  crypto.rs  error.rs  id.rs  lib.rs  meta.rs  notification.rs  object.rs  replication.rs  sse.rs  time.rs  traits.rs
crates/cairn-types/src/testing/: blob.rs  clock.rs  crypto.rs  meta.rs  mod.rs  replication.rs
crates/cairn-types/tests/: doubles_contract.rs
crates/cairn-web/: CLAUDE.md  Cargo.toml  build.rs
crates/cairn-web/src/: lib.rs
crates/cairn-webhook/: CLAUDE.md  Cargo.toml
crates/cairn-webhook/src/: lib.rs  sink.rs  tests.rs
crates/cairn-xml/: CLAUDE.md  Cargo.toml
crates/cairn-xml/fuzz/: Cargo.toml
crates/cairn-xml/fuzz/fuzz_targets/: request_parsers.rs
crates/cairn-xml/src/: lib.rs  parse.rs  tests.rs  timefmt.rs
docs/: ARCH.md  CLAUDE.md  GAPS.md  PLUGIN_CONTRACT.md  auth.md  backup-restore.md  benchmarks.md  configuration.md  control-plane.md  data-plane.md  delivery.md  design.md  (+19 more)
(+322 files in other folders)
