[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["reference", "web"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Harsh-2002/Cairn"
authors = ["The Cairn authors"]

[workspace.dependencies]
# --- internal crates (path deps filled in by each member) ---
cairn-types = { path = "crates/cairn-types" }
cairn-meta = { path = "crates/cairn-meta" }
cairn-meta-async = { path = "crates/cairn-meta-async" }
cairn-blob = { path = "crates/cairn-blob" }
cairn-crypto = { path = "crates/cairn-crypto" }
cairn-net = { path = "crates/cairn-net" }
cairn-auth = { path = "crates/cairn-auth" }
cairn-authz = { path = "crates/cairn-authz" }
cairn-xml = { path = "crates/cairn-xml" }
cairn-protocol = { path = "crates/cairn-protocol" }
cairn-replication = { path = "crates/cairn-replication" }
cairn-import = { path = "crates/cairn-import" }
cairn-webhook = { path = "crates/cairn-webhook" }
cairn-lifecycle = { path = "crates/cairn-lifecycle" }
cairn-control = { path = "crates/cairn-control" }
cairn-web = { path = "crates/cairn-web" }

# --- async runtime & HTTP ---
tokio = { version = "1.43", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
hyper = { version = "1.5", default-features = false }
hyper-util = { version = "0.1", default-features = false }
http = "1.2"
http-body = "1"
http-body-util = "0.1"
bytes = "1.9"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
async-trait = "0.1"
pin-project-lite = "0.2"
tower-service = "0.3"

# --- TLS ---
rustls = { version = "0.23", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
rustls-pemfile = "2"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "tls12", "aws-lc-rs", "webpki-roots"] }

# --- storage ---
rusqlite = { version = "0.32" }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"

# --- crypto & hashing ---
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
md-5 = "0.10"
crc32fast = "1.4"
crc32c = "0.6"
hex = "0.4"
base64 = "0.22"
subtle = "2.6"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
rand = "0.8"

# --- compression ---
zstd = "0.13"
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }

# --- ids & time ---
uuid = { version = "1.11", features = ["v4", "v7"] }

# --- cli & config ---
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }

# --- web embedding ---
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# --- errors ---
thiserror = "2"

# --- fault injection (test-only seam) ---
fail = "0.5"

# --- dev/test ---
proptest = "1"
criterion = "0.5"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
lto = "thin"

# Faster iteration for the heavy C deps (sqlite/zstd) while developing.
[profile.dev.package."*"]
opt-level = 1
