[package]
name = "cairn-authz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
proptest.workspace = true
