[package]
name = "cairn-blob"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local-filesystem blob store for Cairn: durable commit, block compression, reconcile."

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
async-trait.workspace = true
bytes.workspace = true
uuid.workspace = true
futures-util = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync", "macros"] }
md-5.workspace = true
sha1.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
crc32fast.workspace = true
crc32c.workspace = true
hex.workspace = true
base64.workspace = true
zstd.workspace = true
lz4_flex.workspace = true
fail.workspace = true
tracing.workspace = true

[features]
# Arms the test-only fault-injection seam in the durable commit path.
failpoints = ["fail/failpoints"]

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
futures-util.workspace = true
