[package]
name = "cairn-control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The JSON management API for Cairn: overview, buckets, objects, users, and activity."

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
cairn-auth.workspace = true
cairn-authz.workspace = true
cairn-replication.workspace = true
cairn-import.workspace = true
cairn-net.workspace = true
serde.workspace = true
serde_json.workspace = true
http.workspace = true
bytes.workspace = true
uuid.workspace = true
rand.workspace = true
tracing.workspace = true
# `rt` provides `tokio::spawn` for the background replication backfill (resync); the server runs on
# a multi-thread runtime, but this crate only needs the spawn handle.
tokio = { workspace = true, features = ["rt"] }

# Safe statvfs for the /system disk figures (the crate forbids unsafe, so no raw libc).
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-util = { workspace = true, features = ["std"] }
serde_json.workspace = true
