[package]
name = "cairn-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Production cryptography facility for Cairn: AEAD envelope encryption of secrets at rest, a system clock, and HMAC-signed public-read URLs."

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand.workspace = true
hex.workspace = true
tracing.workspace = true

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
