[package]
name = "cairn-lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Background lifecycle scanner for Cairn: S3 lifecycle-configuration parsing and idempotent expiration/abort actions over the trait spine."

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
quick-xml.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-util.workspace = true
