[package]
name = "cairn-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The S3 protocol layer for Cairn: request lifecycles, the chunked decoder, error mapping."

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
cairn-auth.workspace = true
cairn-authz.workspace = true
cairn-replication.workspace = true
cairn-xml.workspace = true
cairn-lifecycle.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rand.workspace = true
bytes.workspace = true
futures-util = { workspace = true, features = ["std"] }
http.workspace = true
hyper.workspace = true
sha2.workspace = true
md-5.workspace = true
hex.workspace = true
base64.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
cairn-meta.workspace = true
cairn-blob.workspace = true
cairn-crypto.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures-util.workspace = true
proptest.workspace = true
tempfile.workspace = true
md-5.workspace = true
criterion.workspace = true

[[bench]]
name = "decode"
harness = false
