[package]
name = "cairn-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The Cairn server binary: wiring, HTTP stack, middleware, and lifecycle."
default-run = "cairn"

[lints]
workspace = true

[features]
# Arms the fault-injection seams in the durable commit path (via cairn-blob) so a sibling
# crash-harness/verification agent can build the server with the fail seams active. No
# production code path depends on this; it only enables `cairn-blob`'s `failpoints` feature.
failpoints = ["cairn-blob/failpoints", "dep:fail"]

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
fail = { workspace = true, optional = true }
cairn-types.workspace = true
cairn-s3.workspace = true
cairn-meta.workspace = true
cairn-blob.workspace = true
cairn-crypto.workspace = true
cairn-auth.workspace = true
cairn-authz.workspace = true
cairn-lifecycle.workspace = true
cairn-replication.workspace = true
cairn-control.workspace = true
cairn-ui.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "macros", "time", "sync", "io-util"] }
rustls = { workspace = true, features = ["aws_lc_rs", "tls12"] }
tokio-rustls = { workspace = true, features = ["aws_lc_rs", "tls12"] }
rustls-pemfile.workspace = true
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "service"] }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures-util = { workspace = true, features = ["std"] }

clap.workspace = true
figment.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
# Used only by the node-local `migrate` CLI command to read the applied schema version after
# `cairn_meta::open` has run migrations; the server proper never touches SQLite directly.
rusqlite = { workspace = true }

tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
futures-util.workspace = true
cairn-types = { workspace = true, features = ["testing"] }
