[package]
name = "cairn-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The Cairn server binary: wiring, HTTP stack, middleware, and lifecycle."
default-run = "cairn"

[lints]
workspace = true

[features]
# Arms the fault-injection seams in the durable commit path (via cairn-blob) so a sibling
# crash-harness/verification agent can build the server with the fail seams active. No
# production code path depends on this; it only enables `cairn-blob`'s `failpoints` feature.
failpoints = ["cairn-blob/failpoints", "dep:fail"]

# Compiles in the async libSQL + Turso metadata backends so CAIRN_META_BACKEND=libsql|turso work.
# OFF by default: the default release binary then links ONLY rusqlite's bundled SQLite, avoiding the
# dual-bundled-SQLite symbol collision and the GNU-ld-only link workaround — so the default binary
# builds on every linker, including the aarch64 cross path (cargo-zigbuild / lld).
meta-async = ["dep:cairn-meta-async"]

# EXPERIMENTAL, Linux-only zero-copy I/O fast path (off by default; ARCH 7.x perf path).
#
# Layer (a) kTLS offload: after the rustls handshake the resulting TLS socket is handed to the
# kernel TLS (kTLS) machinery via the `ktls` crate so the kernel performs the symmetric record
# crypto, offloading it from the userspace rustls path. hyper keeps serving on top of the kTLS
# socket unchanged (it still implements AsyncRead/AsyncWrite); the win is CPU. If kTLS setup
# fails for any reason the connection transparently falls back to the normal userspace TlsStream.
#
# Layer (b) sendfile(2) fast path: a self-contained, tested wrapper around the `sendfile(2)`
# syscall that copies a blob file fd straight to the socket fd. This is LIVE for plaintext HTTP/1.1
# object GETs (see `src/fast_get.rs`): an uncompressed, unencrypted object (full or one sub-range) is
# served file->socket with no userspace copy. The kTLS (HTTPS) takeover is the only deferred arm.
# Enabling the feature never changes the always-on portable streamed path for any non-eligible request.
#
# With the feature OFF the optional deps are not compiled and nothing changes.
fast-io = ["dep:ktls", "dep:libc"]

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
fail = { workspace = true, optional = true }
# Optional, enabled only by `fast-io`. `ktls` drives the kernel-TLS offload; `libc` provides the
# raw `sendfile(2)` syscall for the live plaintext GET fast path. Both are
# effective on Linux only; the source gates every use behind `#[cfg(all(feature = "fast-io",
# target_os = "linux"))]`, so the feature is a harmless no-op if ever built on a non-Linux target.
ktls = { version = "6", optional = true, default-features = false, features = ["aws_lc_rs", "tls12"] }
libc = { version = "0.2", optional = true }
cairn-types.workspace = true
cairn-protocol.workspace = true
cairn-meta.workspace = true
# The async (libSQL + Turso) metadata backends, selectable at runtime via CAIRN_META_BACKEND.
# Optional, enabled by the `meta-async` feature. When enabled, linking this alongside cairn-meta puts
# both rusqlite's and libSQL's bundled SQLite C libraries in the `cairn` binary, which collide on the
# public `sqlite3_*` symbols; `build.rs` then emits a binary-scoped `-z muldefs` link arg (see
# build.rs). Turso is pure-Rust and adds no C SQLite. With the feature OFF the default binary links
# only rusqlite and needs no link workaround.
cairn-meta-async = { workspace = true, optional = true }
cairn-blob.workspace = true
cairn-crypto.workspace = true
cairn-auth.workspace = true
cairn-authz.workspace = true
cairn-lifecycle.workspace = true
cairn-replication.workspace = true
cairn-control.workspace = true
cairn-ui.workspace = true

tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal", "macros", "time", "sync", "io-util"] }
rustls = { workspace = true, features = ["aws_lc_rs", "tls12"] }
tokio-rustls = { workspace = true, features = ["aws_lc_rs", "tls12"] }
rustls-pemfile.workspace = true
hyper = { workspace = true, features = ["server", "http1", "http2", "client"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "service", "client-legacy", "http1"] }
# The remote-administration CLI (`cli_remote.rs`, ARCH 24.2) is a thin HTTP client over a running
# server's management API and S3 data plane. It reuses the same legacy hyper-util client + rustls
# connector the replication sink uses, so the binary links no new HTTP stack: `hyper-rustls` dials
# plaintext for `http://` endpoints and negotiates rustls for `https://`.
hyper-rustls = { workspace = true }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures-util = { workspace = true, features = ["std"] }

clap.workspace = true
figment.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
hex.workspace = true
base64.workspace = true
sha2.workspace = true
# Used only by the node-local `migrate` CLI command to read the applied schema version after
# `cairn_meta::open` has run migrations; the server proper never touches SQLite directly.
rusqlite = { workspace = true }

tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
futures-util.workspace = true
cairn-types = { workspace = true, features = ["testing"] }
# `Jail` gives hermetic, serialized env-var tests for the environment-only config loader.
figment = { workspace = true, features = ["test"] }
