[package]
name = "cairn-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The embedded React management single-page application for Cairn, baked into the server binary via rust-embed (ARCH 23)."

[lints]
workspace = true

[dependencies]
rust-embed.workspace = true
