[package]
name = "cairn-xml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "S3-compatible XML request/response codec for Cairn: generators and parsers over quick-xml."

[lints]
workspace = true

[dependencies]
cairn-types.workspace = true
quick-xml.workspace = true
serde.workspace = true

[dev-dependencies]
cairn-types = { workspace = true, features = ["testing"] }
