[package]
name = "cairn-blob-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cairn-blob = { path = ".." }

[[bin]]
name = "compress_reader"
path = "fuzz_targets/compress_reader.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace; cargo-fuzz builds this with a nightly toolchain.
[workspace]
