[package]
name = "cairn-xml-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
cairn-xml = { path = ".." }

[[bin]]
name = "request_parsers"
path = "fuzz_targets/request_parsers.rs"
test = false
doc = false
bench = false

# Detach from the parent workspace; cargo-fuzz builds this with a nightly toolchain.
[workspace]
